force-app/main/default/objects/Quote__c/fields/ProfitRatioNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxLocal__c</fullName>
    <label>Profit Ratio NIC Tax(Local)%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>