force-app/main/default/objects/Quote__c/fields/Quote_PIC_Name_Flow__c.field-meta.xml
<CustomField>
    <fullName>Quote_PIC_Name_Flow__c</fullName>
    <description>Use for flow only</description>
    <formula>QuotePIC__r.FirstName &amp; &quot; &quot; &amp;  QuotePIC__r.LastName</formula>
    <label>Quote PIC Name (Flow)</label>
    <type>Text</type>
</CustomField>