force-app/main/default/objects/Quote__c/fields/QuoteIssueDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteIssueDate__c</fullName>
    <label>Quote Issue Date</label>
    <type>Date</type>
</CustomField>