force-app/main/default/objects/Quote__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>