force-app/main/default/objects/Quote__c/fields/QuotePIC__c.field-meta.xml
<CustomField>
    <fullName>QuotePIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>