force-app/main/default/objects/Quote__c/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry Received</fullName>
                <default>true</default>
                <label>Inquiry Received</label>
            </value>
            <value>
                <fullName>Under Quotation</fullName>
            </value>
            <value>
                <fullName>Quote Issued</fullName>
            </value>
            <value>
                <fullName>Under Quotation Revision</fullName>
            </value>
            <value>
                <fullName>Quote Reissued</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Close Lost</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>