force-app/main/default/objects/Quote__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>