force-app/main/default/objects/Quote__c/fields/RequestCompanysPIC__c.field-meta.xml
<CustomField>
    <fullName>RequestCompanysPIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Company&apos;s PIC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.RequesterCompany__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>