force-app/main/default/objects/Quote__c/fields/Requester_Company_Name_Flow__c.field-meta.xml
<CustomField>
    <fullName>Requester_Company_Name_Flow__c</fullName>
    <description>Use in flow only</description>
    <formula>RequesterCompany__r.Name</formula>
    <label>Requester Company Name (Flow)</label>
    <type>Text</type>
</CustomField>