force-app/main/default/objects/Quote__c/fields/RequesterCompany__c.field-meta.xml
<CustomField>
    <fullName>RequesterCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>