force-app/main/default/objects/Quote__c/fields/RequestfromCustomerID__c.field-meta.xml
<CustomField>
    <fullName>RequestfromCustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request from Customer ID</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>