force-app/main/default/objects/Quote__c/fields/ShipmentTerm__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTerm__c</fullName>
    <label>Shipment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipment_Term</valueSetName>
    </valueSet>
</CustomField>