force-app/main/default/objects/Quote__c/fields/SOAIssueDate__c.field-meta.xml
<CustomField>
    <fullName>SOAIssueDate__c</fullName>
    <label>SOA Issue Date</label>
    <type>Date</type>
</CustomField>