force-app/main/default/objects/Quote__c/fields/SOASettlementDay__c.field-meta.xml
<CustomField>
    <fullName>SOASettlementDay__c</fullName>
    <label>SOA Settlement Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>