force-app/main/default/objects/Quote__c/fields/TotalAmountofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingActual__c</fullName>
    <label>Total Amount of Buying (Actual)</label>
    <summarizedField>Quoteline__c.TotalAmountofBuyingActual__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>