force-app/main/default/objects/Quote__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <label>Total Amount of Buying (USD)</label>
    <summarizedField>Quoteline__c.TotalAmountofBuyingFCY__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>