force-app/main/default/objects/Quote__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <label>Total Amount of Buying (VND)</label>
    <summarizedField>Quoteline__c.TotalAmountofBuyingLocal__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>