force-app/main/default/objects/Quote__c/fields/TotalAmountofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingActual__c</fullName>
    <label>Total Amount of Selling (Actual)</label>
    <summarizedField>Quoteline__c.TotalAmountofSellingActual__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>