force-app/main/default/objects/Quote__c/fields/TotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCY__c</fullName>
    <label>Total Amount of Selling (USD)</label>
    <summarizedField>Quoteline__c.TotalAmountofSellingFCY__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>