force-app/main/default/objects/Quote__c/fields/TotalAmountofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingLocal__c</fullName>
    <label>Total Amount of Selling (VND)</label>
    <summarizedField>Quoteline__c.TotalAmountofSellingLocal__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>