force-app/main/default/objects/Quote__c/fields/TotalBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingAmountLocal__c</fullName>
    <label>Total Buying Amount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>