force-app/main/default/objects/Quote__c/fields/TotalBuyingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxActual__c</fullName>
    <label>Total Buying Incl Tax (Actual)</label>
    <summarizedField>Quoteline__c.TotalBuyingInclTaxActual__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>