force-app/main/default/objects/Quote__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <label>Total Buying Incl Tax (USD)</label>
    <summarizedField>Quoteline__c.TotalBuyingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>