force-app/main/default/objects/Quote__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <summarizedField>Quoteline__c.TotalBuyingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>