force-app/main/default/objects/Quote__c/fields/TotalSellingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingAmountLocal__c</fullName>
    <label>Total Selling Amount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>