force-app/main/default/objects/Quote__c/fields/TotalSellingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxActual__c</fullName>
    <label>Total Selling Incl Tax (Actual)</label>
    <summarizedField>Quoteline__c.TotalSellingInclTaxActual__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>