force-app/main/default/objects/Quote__c/fields/TotalSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxFCY__c</fullName>
    <label>Total Selling Incl Tax (USD)</label>
    <summarizedField>Quoteline__c.TotalSellingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>