force-app/main/default/objects/Quote__c/fields/TotalSellingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxLocal__c</fullName>
    <label>Total Selling Incl Tax (VND)</label>
    <summarizedField>Quoteline__c.TotalSellingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>Quoteline__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>