force-app/main/default/objects/Quote__c/fields/TypeOfCargo1__c.field-meta.xml
<CustomField>
    <fullName>TypeOfCargo1__c</fullName>
    <label>Type Of Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Dangerous</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
            <value>
                <fullName>Volume Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>