force-app/main/default/objects/Quote__c/fields/TypeofCargo__c.field-meta.xml
<CustomField>
    <fullName>TypeofCargo__c</fullName>
    <label>Type of Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Cargo</valueSetName>
    </valueSet>
</CustomField>