force-app/main/default/objects/Quote__c/fields/valid_check_copy__c.field-meta.xml
<CustomField>
    <fullName>valid_check_copy__c</fullName>
    <formula>ValidDate__c &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>valid check copy</label>
    <type>Checkbox</type>
</CustomField>