force-app/main/default/objects/Quote__c/fields/Validto__c.field-meta.xml
<CustomField>
    <fullName>Validto__c</fullName>
    <label>Valid to</label>
    <type>Date</type>
</CustomField>