force-app/main/default/objects/Quote__c/fields/VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>VesselFlight__c</fullName>
    <label>Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>