force-app/main/default/objects/Quote__c/fields/Voyage__c.field-meta.xml
<CustomField>
    <fullName>Voyage__c</fullName>
    <label>Voyage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>