force-app/main/default/objects/Quote__c/validationRules/POLPOD_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>POLPOD_rule</fullName>
    <active>false</active>
    <errorConditionFormula>PODAOA__c  =  POLAOD__c</errorConditionFormula>
    <errorMessage>P.O.L (A.O.A) and P.O.D (A.O.D) need to be different!</errorMessage>
</ValidationRule>