force-app/main/default/objects/Quote__c/validationRules/QuotePIC_is_Saleman_SaleManager.validationRule-meta.xml
<ValidationRule>
    <fullName>QuotePIC_is_Saleman_SaleManager</fullName>
    <active>true</active>
    <errorConditionFormula>checkQuotePIC__c</errorConditionFormula>
    <errorDisplayField>QuotePIC__c</errorDisplayField>
    <errorMessage>Quote PIC must have role is Saleman/ Sales Manager</errorMessage>
</ValidationRule>