force-app/main/default/objects/Quote__c/validationRules/ValidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidDate</fullName>
    <active>true</active>
    <errorConditionFormula>Validto__c  &lt;  QuoteIssueDate__c</errorConditionFormula>
    <errorMessage>Valid Date must be greater than Quote Issue Date</errorMessage>
</ValidationRule>