force-app/main/default/objects/Quote__c/listViews/QUOTE_LOSE.listView-meta.xml
<ListView>
    <fullName>QUOTE_LOSE</fullName>
    <columns>NAME</columns>
    <columns>QuoteName__c</columns>
    <columns>RequesterCompany__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>TotalAmountofSellingFCY__c</columns>
    <columns>TotalAmountofSellingLocal__c</columns>
    <columns>TotalSellingInclTaxFCY__c</columns>
    <columns>TotalSellingInclTaxLocal__c</columns>
    <columns>TypeOfCargo1__c</columns>
    <columns>ETA__c</columns>
    <columns>ETD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QuoteStatus__c</field>
        <operation>equals</operation>
        <value>Close Lost</value>
    </filters>
    <label>QUOTE LOSE</label>
</ListView>